--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "play-sound": "^1.1.5",
