--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,11 @@
     "pg": "^8.8.0",
     "play-sound": "^1.1.5",
     "postgres": "^3.3.1",
+    "pug": "^3.0.2",
+    "pug-cli": "^1.0.0-alpha6",
     "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "socket.io-client": "^4.5.3",
+    "uuid": "^9.0.0"
   },
   "name": "chatroom",
   "version": "1.0.0",
