--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "@sentry/node": "^7.29.0",
+    "@sentry/tracing": "^7.29.0",
     "dayjs": "^1.11.6",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "play-sound": "^1.1.5",
     "postgres": "^3.3.1",
@@ -23,5 +24,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
