--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 server/node_modules
+server/package-lock.json
 package-lock.json
-
+client/node_modules
+client/package-lock.json
 client/.DS_Store
 server/.DS_Store
+
 .DS_Store
