minor changes in client and createTables() code redesigned on server

--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@sentry/node": "^7.29.0",
     "@sentry/tracing": "^7.29.0",
+    "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
     "express": "^4.18.2",
