--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
     "play-sound": "^1.1.5",
