--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "@sentry/node": "^7.29.0",
-    "@sentry/tracing": "^7.29.0",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
@@ -22,7 +20,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
